start to make pages vissable on site part

--- a/public/assets/site/css/a2zcms.css
+++ b/public/assets/site/css/a2zcms.css
@@ -187,3 +187,7 @@ a.navbar-brand  {
 .pager li>a,.pager li>span{
 	border-radius:10px!important;
 }
+
+label {
+    font-weight: lighter!important;
+}
