echo css+java script of page, open menu on mouse hover

--- a/public/assets/site/css/a2zcms.css
+++ b/public/assets/site/css/a2zcms.css
@@ -191,3 +191,6 @@ a.navbar-brand  {
 label {
     font-weight: lighter!important;
 }
+
+ul.nav li.dropdown:hover ul.dropdown-menu{ display: block; }
+.nav .dropdown-toggle .caret { display:none; }
