--- a/public/assets/site/css/a2zcms.css
+++ b/public/assets/site/css/a2zcms.css
@@ -1,9 +1,6 @@
 /* 
 Custom CSS for...
-'Modern Business' HTML Theme by Start Bootstrap
-
-All Start Bootstrap themes are licensed under Apache 2.0. 
-For more info and more free Bootstrap 3 HTML themes, visit http://startbootstrap.com!
+'A2Z CMS' HTML Theme by Start Bootstrap
 */
 
 /* Global Styles */
