--- a/public/assets/admin/css/select2.css
+++ b/public/assets/admin/css/select2.css
@@ -1,5 +1,5 @@
 /*
-Version: 3.4.3 Timestamp: Tue Sep 17 06:47:14 PDT 2013
+Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
 */
 .select2-container {
     margin: 0;
@@ -605,7 +605,7 @@ disabled look for disabled choices in the results dropdown
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi)  {
   .select2-search input, .select2-search-choice-close, .select2-container .select2-choice abbr, .select2-container .select2-choice .select2-arrow b {
-      background-image: url('../img/select2x2.png') !important;
+      background-image: url('select2x2.png') !important;
       background-repeat: no-repeat !important;
       background-size: 60px 40px !important;
   }
